fix(style): correct text overflow behavior in list table header sort

--- a/src/components/List/components/public/ListTableHeaderSort/ListTableHeaderSort.module.scss
+++ b/src/components/List/components/public/ListTableHeaderSort/ListTableHeaderSort.module.scss
@@ -4,10 +4,6 @@
   width: var(--s-10);
 }
 
-.list-table-header-sort-label {
-  min-width: max-content;
-}
-
 .list-table-header-sort-button {
   all: unset;
   cursor: pointer;
